# Mypage

./: .gitignore  pyproject.toml
projects/mysite/: tailwind.config.js
projects/mysite/config/: settings.py  urls.py
projects/mysite/contact/: urls.py  views.py
projects/mysite/history/: urls.py  views.py
projects/mysite/home/: urls.py
projects/mysite/pybo/: admin.py  froms.py  models.py  urls.py  views.py
projects/mysite/review/: admin.py  models.py  urls.py  views.py
projects/mysite/templates/components/: detail_block.html  project_card.html
projects/mysite/templates/pybo/: auth.html  base.html  project_confirm_delete.html  project_detail.html  project_form.html  project_list.html
projects/mysite/templates/review/: review_confirm_delete.html  review_detail.html  review_form.html  review_list.html
