[project]
name = "mypage"
version = "0.1.0"
description = ""
authors = [
    {name = "leleleehouse",email = "dayom0124@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2,<6.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "django-ckeditor (>=6.7.2,<7.0.0)",
    "markdown (>=3.8,<4.0)",
    "pygments (>=2.19.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
